--- a/Profile.css
+++ b/Profile.css
@@ -62,6 +62,13 @@
   
   .Profile address {
     font-size: 16px;
+    color: #545454;
+  }
+
+  .Profile h2 {
+    color: #E5C08A;
+    font-size: 30px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
   }
   
   .Profile .button {
