--- a/Profile.css
+++ b/Profile.css
@@ -14,7 +14,7 @@
   }
   
   .about-section {
-    background: url(./asset/ibuatik2.jpg) no-repeat left;
+    background: url(asset/ibuatik2.jpg) no-repeat left;
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.2);
     background-size: 48%;
     background-color: #fdfdfd;
